Fix event spacing to match works

--- a/style.css
+++ b/style.css
@@ -251,13 +251,13 @@ body.about .about-lines {
 .event-date {
     display: block;
     font-weight: 300;
-    margin-bottom: 0;
+    margin: 0.2em 0 0 0;
 }
 
 .event-details {
     display: block;
     font-weight: 300;
-    margin-top: 0.2em;
+    margin-top: 0;
 }
 
 .separator {
